--- a/configs/experiment/jigsaw_bert.yaml
+++ b/configs/experiment/jigsaw_bert.yaml
@@ -4,15 +4,14 @@
 module:
     model:
         num_labels: 1
-        pretrained_model_name_or_path: distilbert-base-uncased
+        pretrained_model_name_or_path: bert-base-uncased
         
 datamodule:
     batch_size: 32
-    train_data_path: ${jigsaw}/train_subset.csv
+    train_data_path: ${jigsaw}/train.csv
     test_data_path: ${jigsaw}/test_private_expanded.csv
     
 trainer:
-    gpus: 1
-    val_check_interval: 0.5
-    max_epochs: 2
+    val_check_interval: 0.25
+    max_epochs: 3
 
