--- a/configs/experiment/jigsaw_distillbert.yaml
+++ b/configs/experiment/jigsaw_distillbert.yaml
@@ -8,11 +8,10 @@ module:
         
 datamodule:
     batch_size: 32
-    train_data_path: ${jigsaw}/train_subset.csv
+    train_data_path: ${jigsaw}/train.csv
     test_data_path: ${jigsaw}/test_private_expanded.csv
     
 trainer:
-    gpus: 1
-    val_check_interval: 0.5
-    max_epochs: 2
+    val_check_interval: 0.25
+    max_epochs: 3
 
