--- a/configs/experiment/jigsaw_test.yaml
+++ b/configs/experiment/jigsaw_test.yaml
@@ -12,7 +12,9 @@ datamodule:
     test_data_path: ${jigsaw}/test_private_expanded.csv
     
 trainer:
-    gpus: 1
-    val_check_interval: 0.5
+    accelerator: gpu
+    devices: 1
+    val_check_interval: 0.25
     max_epochs: 2
+
 
