--- a/configs/trainer/default.yaml
+++ b/configs/trainer/default.yaml
@@ -1,13 +1,12 @@
 _target_: pytorch_lightning.Trainer
 
-# set `1` to train on GPU, `0` to train on CPU only
-gpus: 1
-max_steps: -1
-max_epochs: 2
-weights_summary: null
-progress_bar_refresh_rate: 10
-resume_from_checkpoint: null
+accelerator: gpu
+devices: 1
 log_every_n_steps: 50
 val_check_interval: 0.25
-reload_dataloaders_every_n_epochs: 1
-strategy: ddp
+# set True to to ensure deterministic results
+# makes training slower but gives more reproducibility than just setting seeds
+deterministic: False
+
+# mixed precision for extra speed-up
+# precision: 16
