--- a/configs/trainer/default.yaml
+++ b/configs/trainer/default.yaml
@@ -4,6 +4,7 @@ accelerator: gpu
 devices: 1
 log_every_n_steps: 50
 val_check_interval: 0.25
+max_epochs: 3
 # set True to to ensure deterministic results
 # makes training slower but gives more reproducibility than just setting seeds
 deterministic: False
