changed validation interval

--- a/configs/experiment/jigsaw_distillbert_warmup.yaml
+++ b/configs/experiment/jigsaw_distillbert_warmup.yaml
@@ -1,10 +1,11 @@
 # @package _global_
-
+defaults:
+  - override /module: classification_warmup.yaml
 
 module:
     model:
         num_labels: 1
-        pretrained_model_name_or_path: bert-base-uncased
+        pretrained_model_name_or_path: distilbert-base-uncased
         
 datamodule:
     batch_size: 32
@@ -14,4 +15,3 @@ datamodule:
 trainer:
     accelerator: gpu
     devices: 1
-
