added adapter option

--- a/configs/module/classification_warmup.yaml
+++ b/configs/module/classification_warmup.yaml
@@ -4,6 +4,7 @@ defaults:
   - override scheduler: linear_warmup.yaml
 
 _target_: src.module.jigsaw_classification.JigsawClassification
+adapters: False
 model:
   _target_: transformers.AutoModelForSequenceClassification.from_pretrained
   num_labels: ???
