--- a/configs/experiment/jigsaw_test_adapters.yaml
+++ b/configs/experiment/jigsaw_test_adapters.yaml
@@ -2,16 +2,21 @@
 
 
 module:
+    adapters: True
+    optimizer:
+        lr: 0.0001
     model:
         num_labels: 1
         pretrained_model_name_or_path: distilbert-base-uncased
         
 datamodule:
     batch_size: 32
-    train_data_path: ${jigsaw}/train.csv
+    train_data_path: ${jigsaw}/train_subset.csv
     test_data_path: ${jigsaw}/test_private_expanded.csv
     
 trainer:
     accelerator: gpu
     devices: 1
-    val_check_interval: 0.25
+    max_epochs: 2
+
+
