--- a/configs/experiment/jigsaw_gpt2_warmup.yaml
+++ b/configs/experiment/jigsaw_gpt2_warmup.yaml
@@ -10,16 +10,10 @@ module:
         pretrained_model_name_or_path: gpt2
 
         
-collate_fn:
-    padding: False
-        
 datamodule:
     batch_size: 32
-    train_data_path: ${jigsaw}/train_subset.csv
+    train_data_path: ${jigsaw}/train.csv
     test_data_path: ${jigsaw}/test_private_expanded.csv
-    tokenizer:
-        #_target_: transformers.GPT2Tokenizer
-        pad_token: "[PAD]"
     
 trainer:
     accelerator: gpu
