--- a/configs/experiment/jigsaw_test.yaml
+++ b/configs/experiment/jigsaw_test.yaml
@@ -2,18 +2,25 @@
 
 
 module:
+    adapters: True
+    adapters_reduction_factor: 2
     model:
         num_labels: 1
         pretrained_model_name_or_path: distilbert-base-uncased
         
 datamodule:
     batch_size: 32
-    train_data_path: ${jigsaw}/train_subset.csv
+    train_data_path: ${jigsaw}/train.csv
     test_data_path: ${jigsaw}/test_private_expanded.csv
     
 trainer:
     accelerator: gpu
     devices: 1
+    val_check_interval: 1.0
     max_epochs: 2
+
+logger:
+    wandb:
+        project: test
 
 
