--- a/configs/experiment/jigsaw_bert_warmup_lora.yaml
+++ b/configs/experiment/jigsaw_bert_warmup_lora.yaml
@@ -1,19 +1,22 @@
 # @package _global_
 
+defaults:
+  - override /module: classification_warmup.yaml
 
 module:
+    adapters: True
+    optimizer:
+        lr: 0.0005
     model:
         num_labels: 1
-        pretrained_model_name_or_path: distilbert-base-uncased
+        pretrained_model_name_or_path: bert-base-uncased
         
 datamodule:
     batch_size: 32
-    train_data_path: ${jigsaw}/train_subset_small.csv
+    train_data_path: ${jigsaw}/train.csv
     test_data_path: ${jigsaw}/test_private_expanded.csv
     
 trainer:
     accelerator: gpu
     devices: 1
-    max_epochs: 2
-
 
