--- a/requirements.txt
+++ b/requirements.txt
@@ -1,100 +1,384 @@
+absl-py==1.0.0
 aiohttp==3.8.5
 aiosignal==1.3.1
+alembic==1.7.5
 annotated-types==0.5.0
 antlr4-python3-runtime==4.9.3
 anyio==3.7.1
-appdirs==1.4.4
-arrow==1.2.3
+anykeystore==0.2
+apache-beam==2.51.0
+argon2-cffi==21.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asttokens==2.4.0
+astunparse==1.6.3
+async-generator==1.10
+async-lru==2.0.4
 async-timeout==4.0.3
 attrs==23.1.0
+autopage==0.4.0
+Babel==2.9.1
+backcall==0.2.0
 backoff==2.2.1
+backports.entry-points-selectable==1.1.1
+batchspawner @ git+https://github.com/jupyterhub/batchspawner.git@2eb5e945a56780cf1b21bcb92c4c760b9e48a061
 beautifulsoup4==4.12.2
+black==21.11b1
+bleach==4.1.0
 blessed==1.20.0
+blis==0.7.5
+blosc2==2.2.9
+bokeh==3.2.2
+brotlipy==0.7.0
+cachetools==4.2.4
+catalogue==2.0.6
 certifi==2023.7.22
+certipy==0.1.3
+cffi==1.15.0
+cfgv==3.3.1
+chardet==4.0.0
 charset-normalizer==3.2.0
 click==8.1.7
+cliff==3.10.0
+cloudpickle==3.0.0
+cmaes==0.8.2
+cmd2==2.3.2
+colorama==0.4.4
 colorlog==6.7.0
+comm==0.1.4
+commonmark==0.9.1
+conda==4.9.2
+conda-package-handling @ file:///tmp/build/80754af9/conda-package-handling_1605484832764/work
+configparser==5.1.0
+contourpy==1.1.1
+crcmod==1.7
 croniter==1.4.1
+cryptacular==1.6.2
+cryptography==41.0.4
+cycler==0.12.1
+cymem==2.0.6
+dask==2023.9.3
+dask-jobqueue==0.8.2
+dask_labextension==7.0.0
 datasets==2.14.5
 dateutils==0.6.12
+debugpy==1.5.1
+decorator==5.1.0
 deepdiff==6.5.0
-dill==0.3.7
+defusedxml==0.7.1
+distlib==0.3.3
+distributed==2023.9.3
+dnspython==2.4.2
 docker-pycreds==0.4.0
+docopt==0.6.2
+e==1.4.5
+entrypoints==0.3
 exceptiongroup==1.1.3
+executing==2.0.0
 fastapi==0.103.1
+fastavro==1.8.4
+fasteners==0.19
+fastjsonschema==2.18.1
 filelock==3.12.4
+flake8==4.0.1
+flatbuffers==2.0
+fonttools==4.43.1
+fqdn==1.5.1
 frozenlist==1.4.0
 fsspec==2023.6.0
+future==0.18.2
+gast==0.4.0
 gitdb==4.0.10
 GitPython==3.1.37
+google-auth==2.3.3
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+greenlet==1.1.2
+grpcio==1.42.0
 h11==0.14.0
-huggingface-hub==0.17.2
+h5py==3.6.0
+hdfs==2.7.3
+horovod==0.23.0
+httplib2==0.22.0
+hupper==1.12
 hydra-colorlog==1.2.0
 hydra-core==1.3.2
+hydra-optuna-sweeper==1.1.0
+identify==2.4.0
 idna==3.4
+importlib-metadata==4.8.2
+importlib-resources==6.1.0
+iniconfig==1.1.1
 inquirer==3.1.3
+intel-openmp==2022.0.2
+ipykernel==6.5.1
+ipympl==0.9.3
+ipython==7.30.0
+ipython-genutils==0.2.0
+ipywidgets==8.1.1
+isoduration==20.11.0
+isort==5.10.1
 itsdangerous==2.1.2
+jedi==0.18.1
 Jinja2==3.1.2
+joblib==1.1.0
+Js2Py==0.74
+json5==0.9.6
+jsonpointer==2.4
+jsonschema==4.2.1
+jsonschema-specifications==2023.7.1
+jupyter-client==7.1.0
+jupyter-core==4.9.1
+jupyter-events==0.7.0
+jupyter-lsp==2.2.0
+jupyter-server==1.12.1
+jupyter-telemetry==0.1.0
+jupyter_server_proxy==4.1.0
+jupyter_server_terminals==0.4.4
+jupyterhub==4.0.2
+jupyterlab==3.2.4
+jupyterlab-pygments==0.1.2
+jupyterlab-server==2.8.2
+jupyterlab-widgets==3.0.9
+jupyterlmod==4.0.3
+kaggle==1.5.16
+keras==2.7.0
+Keras-Preprocessing==1.1.2
+kiwisolver==1.3.2
+langcodes==3.3.0
+libclang==12.0.0
 lightning==2.0.9
 lightning-cloud==0.5.38
 lightning-utilities==0.9.0
+locket==1.0.0
+Mako==1.1.6
+Markdown==3.3.6
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
+matplotlib==3.3.4
+matplotlib-inline==0.1.3
+mccabe==0.6.1
 mdurl==0.1.2
+mistune==0.8.4
+mkl==2022.0.2
+mkl-service==2.4.0
+ml-dtypes==0.2.0
 mpmath==1.3.0
+msgpack==1.0.7
 multidict==6.0.4
 multiprocess==0.70.15
+murmurhash==1.0.6
+mypy-extensions==0.4.3
+mysql==0.0.3
+mysqlclient==2.2.0
+nbclassic==0.3.4
+nbclient==0.5.9
+nbconvert==6.3.0
+nbformat==5.1.3
+ndindex==1.7
+nest-asyncio==1.5.1
 networkx==3.1
-numpy==1.26.0
+nodeenv==1.6.0
+notebook==6.4.6
+notebook_shim==0.2.3
+numexpr==2.8.7
+numpy==1.26.2
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.18.1
+nvidia-nvjitlink-cu12==12.2.140
+nvidia-nvtx-cu12==12.1.105
+oauthlib==3.1.1
+objsize==0.6.1
 omegaconf==2.3.0
+opt-einsum==3.3.0
+optuna==2.4.0
 ordered-set==4.1.0
-packaging==23.1
+orjson==3.9.10
+overrides==7.4.0
+packaging==23.2
+pamela==1.1.0
 pandas==2.1.1
+pandocfilters==1.5.0
+parso==0.8.2
+partd==1.4.1
+PasteDeploy==3.0.1
+pathspec==0.9.0
 pathtools==0.1.2
+pathy==0.6.1
+pbkdf2==1.3
+pbr==5.8.0
+pexpect==4.8.0
+pickleshare==0.7.5
 Pillow==10.0.1
-protobuf==4.24.3
+plaster==1.1.2
+plaster-pastedeploy==1.0.1
+platformdirs==2.4.0
+plotly==5.17.0
+pluggy==1.0.0
+pre-commit==2.15.0
+preshed==3.0.6
+prettytable==2.4.0
+prometheus-client==0.12.0
+promise==2.3
+prompt-toolkit==3.0.23
+proto-plus==1.22.3
+protobuf==3.20.3
 psutil==5.9.5
-pyarrow==13.0.0
+psycopg2-binary==2.9.9
+ptyprocess==0.7.0
+pudb==2021.2.2
+pure-eval==0.2.2
+py==1.11.0
+py-cpuinfo==9.0.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycodestyle==2.8.0
+pycosat==0.6.3
+pycparser==2.21
 pydantic==2.1.1
 pydantic_core==2.4.0
+pyDeprecate==0.3.1
+pydot==1.4.2
+pyflakes==2.4.0
 Pygments==2.16.1
+pyjsparser==2.7.1
 PyJWT==2.8.0
+pymongo==4.5.0
+pyOpenSSL==23.2.0
+pyparsing==3.0.6
+pyperclip==1.8.2
+pyramid==2.0.2
+pyramid-mailer==0.15.1
+pyro-api==0.1.2
+pyro-ppl==1.8.6
+pyrsistent==0.18.0
+PySocks @ file:///tmp/build/80754af9/pysocks_1605305812635/work
+pytest==6.2.5
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-editor==1.0.4
+python-json-logger==2.0.7
 python-multipart==0.0.6
+python-slugify==8.0.1
+python3-openid==3.2.0
 pytorch-lightning==2.0.9
 pytz==2023.3.post1
 PyYAML==6.0.1
+pyzmq==22.3.0
 readchar==4.0.5
+referencing==0.30.2
 regex==2023.8.8
+repoze.sendmail==4.4.1
 requests==2.31.0
+requests-oauthlib==1.3.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
 rich==13.5.3
-safetensors==0.3.3
+rootutils==1.0.7
+rpds-py==0.10.4
+rsa==4.8
+ruamel-yaml-conda @ file:///tmp/build/80754af9/ruamel_yaml_1605527293619/work
+ruamel.yaml==0.17.35
+ruamel.yaml.clib==0.2.8
+sacremoses==0.0.46
+scikit-learn==0.24.2
+scipy==1.11.2
+seaborn==0.11.2
+Send2Trash==1.8.2
+sentencepiece==0.1.96
 sentry-sdk==1.31.0
 setproctitle==1.3.2
+setuptools-scm==7.1.0
+sh==1.14.2
+shortuuid==1.0.8
+simpervisor==1.0.0
 six==1.16.0
+smart-open==5.2.1
 smmap==5.0.1
 sniffio==1.3.0
+sortedcontainers==2.4.0
 soupsieve==2.5
+spacy==3.2.1
+spacy-legacy==3.0.8
+spacy-loggers==1.0.1
+SQLAlchemy==1.4.27
+srsly==2.4.2
+stack-data==0.6.3
 starlette==0.27.0
 starsessions==1.3.0
+stevedore==3.5.0
+subprocess32==3.5.4
 sympy==1.12
-tokenizers==0.13.3
-torch==2.0.1
-torchaudio==2.0.2
-torchmetrics==1.2.0
-torchvision==0.15.2
+tables==3.9.1
+tbb==2021.5.1
+tblib==2.0.0
+tenacity==8.2.3
+tensorboard==2.7.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.0
+tensorflow==2.7.0
+tensorflow-estimator==2.7.0
+tensorflow-io-gcs-filesystem==0.23.1
+termcolor==1.1.0
+terminado==0.12.1
+testpath==0.5.0
+text-unidecode==1.3
+thinc==8.0.13
+threadpoolctl==3.0.0
+tinycss2==1.2.1
+toml==0.10.2
+tomli==1.2.2
+toolz==0.12.0
+torch==2.1.1+cu118
+torch-SM3==0.1.0
+tornado==6.1
 tqdm==4.66.1
 traitlets==5.10.0
-transformers==4.33.2
+transaction==3.1.0
+translationstring==1.4
+triton==2.1.0
+typer==0.4.0
+types-python-dateutil==2.8.19.14
 typing_extensions==4.8.0
 tzdata==2023.3
+tzlocal==5.2
+uri-template==1.3.0
 urllib3==2.0.5
+urwid==2.1.2
+urwid-readline==0.13
 uvicorn==0.23.2
+velruse==1.1.1
+venusian==3.0.0
+virtualenv==20.10.0
 wandb==0.15.11
-wcwidth==0.2.6
+wasabi==0.9.0
+wcwidth==0.2.8
+webcolors==1.13
+webencodings==0.5.1
+WebOb==1.8.7
 websocket-client==1.6.3
 websockets==11.0.3
-xxhash==3.3.0
+Werkzeug==2.0.2
+widgetsnbextension==4.0.9
+wrapt==1.13.3
+WTForms==3.1.1
+wtforms-recaptcha==0.3.2
+xlrd==2.0.1
+XlsxWriter==3.1.7
+xlwt==1.3.0
+xyzservices==2023.10.0
 yarl==1.9.2
+yaspin==2.1.0
+zict==3.0.0
+zipp==3.6.0
+zope.deprecation==5.0
+zope.interface==6.1
+zope.sqlalchemy==3.1
